# nrp

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  flake.nix  mise.toml  pyproject.toml
docs/: README.md  architecture.md  engine-integration.md  extensions.md  hardening-track.md  paper-mapping.md  performance.md  pipeline-feasibility.md  production-track.md  quickstart.md  report-2026-07-01.md  report-2026-07-02.md  roadmap.md  scale-track.md  tracks.md
examples/: ablation.py  animated_lights.json  audit_pipeline_claims.py  bedroom_512_torch.json  dynamic_geometry.py  engine_runtime.py  environment_fit.py  export_js_viewer.py  export_webgpu_demo.py  export_webgpu_rig.py  export_webgpu_runtime.py  f1_shot_kitchen.json  f2_final_shot.py  g2_gate.py  gate_overhead.py  generative_loop.py  h3_textured_quad_sweep.py  h5_kitchen_dynamic.py  h6_storage_sweep.py  hand_authored_target.py  image_based_baseline.py  inverse_grid.py  kitchen_512_torch.json  kitchen_512_torch_g2.json  kitchen_torch.json  layers.py  light_aware_proxy_ab.py  light_aware_sampling.py  make_art_target.py  mitsuba_512_streamed.py  mitsuba_cornell_128_torch.json  mitsuba_cornell_torch.json  multiview.py  out_of_core.py  pack_bench.py  production_controls.py  quality_tiers.py  quality_tiers_production.py  residual_dynamic.py  s1_streamed_gather_bench.py  (+18 more)
nrp/: __init__.py  compare_reference.py  dataset.py  dynamic_geometry.py  environment_fit.py  export_bench.py  gather_light.py  lights.py  metrics.py  mitsuba_exporter.py  model.py  optimize_lights.py  path_cache.py  relight.py  rgb9e5.py  train.py  (+2 more)
(+123 files in other folders)
