[project]
name = "nrp"
version = "0.1.0"
description = "CPU-only sample reimplementation of the neural-render-proxies decomposition: path caching, decoupled emission gathering, a compact differentiable proxy, and inverse lighting."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "numpy>=2.0",
]

[dependency-groups]
dev = [
  "ruff>=0.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
